# proto-MPI

./: README.md
src/: AsyncSimulator.h  CMakeLists.txt  dataDummy.h  host_file  main.cpp  makefile  mpi_dummy  receiverDummy.h  remoteDummy.h  remoteSimulatorReceiver.h  remoteSimulatorSender.h
